--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Extract, prepare, publish and update Transfermarkt datasets."
 authors = ["dcaribou <davidcereijo@live.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1, <3.11, !=3.9.7"
+python = ">=3.8.1, <3.14, !=3.9.7"
 pandas = "^1.4.2"
 frictionless = "4.40.8"
 pytest = "^7.1.2"
@@ -20,6 +20,7 @@ duckdb-engine = "^0.7.3"
 dvc = {extras = ["s3"], version = "^3.22.0"}
 watchdog = "^3.0.0"
 kaggle = "^1.6.11"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
